--- a/Ex1/part1/index.html
+++ b/Ex1/part1/index.html
@@ -17,7 +17,7 @@
       <input type="text" class="form-control" id="lat" placeholder="Latitude">
     </div>
     <div class="form-group">
-      <label for="lng">Password</label>
+      <label for="lng">Longtitude</label>
       <input type="text" class="form-control" id="lng" placeholder="Longtitude">
     </div>
     <div style="text-align: center">
